# tgcrypto-pyroblack

./: NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-load.yml  wheels.yml
tests/: __init__.py
tests/cbc/: test_cbc.py
tests/ctr/: test_ctr.py
tests/ige/: test_ige.py
tgcrypto/: aes256.c  aes256.h  cbc256.c  ctr256.c  ctr256.h  ige256.c  ige256.h  mtproto.c  mtproto.h  sha256.c  sha256.h  tgcrypto.c
